Fix sidebar bug where setting div stretched out of container.

--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,27 @@
 * {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: Roboto, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
 }
   
 
 .container {
-    height: 100%;
     display: grid;
     grid-template: 1fr 3fr / 1fr 5fr; /*row, col*/
+    height: 100vh;
+    width: 100vw;
+}
+
+.dashboard-icon {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding-bottom: 20px;
 }
 
 .sidebar-container {
@@ -19,7 +29,6 @@ body {
     grid-row: 1 / 4;
     background-color: #159fea;
     padding: 20px;
-
     color: #fff;
 }
 
@@ -31,21 +40,17 @@ body {
 .sidebar-container li {
     display: flex;
     align-items: center;
-    padding: 5px;
+    padding: 10px;
     gap: 15px;
 }
 
-.navigation {
-    display: grid;
-    grid-template-rows: 1fr 4fr;
-    gap: 30px;
-    margin-top: 20px;
+.user-menu {
+    padding-bottom: 50px;
 }
 
 .header-container {
     grid-column: 2;
     grid-row: 1 / 2;
-
     display: grid;
     grid-template-rows: 1fr 2fr;
 }
